Squashed commit of the following:
commit aa84160f735f476e490adef9db88f6f4e903f785
Author: maxgrafik <78545594+maxgrafik@users.noreply.github.com>
Date:   Fri Jun 7 17:40:04 2024 +0200

    removing unused css

commit 8bec2b1e43f075be7aeb2455ad7e3f1b65d118b6
Author: maxgrafik <78545594+maxgrafik@users.noreply.github.com>
Date:   Fri Jun 7 17:39:31 2024 +0200

    code refactoring

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
     <link rel="manifest" href="manifest.json">
 
-    <link href="css/default.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
