--- a/src/www/js/app/app.html
+++ b/src/www/js/app/app.html
@@ -7,4 +7,8 @@
 </section>
 <!-- /ko -->
 
-<alert params="config: confirmStopDlg"></alert>
+<alert params="title: AlertTitle,
+               message: AlertMessage,
+               actions: AlertActions,
+               isPresented: AlertIsPresented">
+</alert>
